k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_predictorid"
    nginx.ingress.kubernetes.io/upstream-hash-by-subset: "true"
    nginx.ingress.kubernetes.io/upstream-hash-by-subset-size: "3"
  name: mung-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 4000
      - path: /prediction
        pathType: Prefix
        backend:
          service:
            name: cnn-serve-service
            port:
              number: 4100
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cnn-client-service
            port:
              number: 4200
---
kind: Service
apiVersion: v1
metadata:
  name: mung-ingress-service
  labels:
    app: mung-ingress-service
spec:
  selector:
    app: mung-ingress
  ports:
    - name: http
      port: 80
      targetPort: 80
